[package]
name = "carbon"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tonyrizzotto/carbon-copy-cli.git"
license = "MIT"
categories = ['command-line-utility']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = '2'
